--- a/gallery.html
+++ b/gallery.html
@@ -84,7 +84,62 @@
         <!-- bg outer wrapper -->
     </div>
 
-
+    <section class="float-left w-100 news-articles-con position-relative padding-top padding-bottom main-box">
+        <img alt="vector" class="vector4 wow bounceInUp img-fluid position-absolute" data-wow-duration="2s" src="assets/images/vector4.png">
+        <img alt="vector" class="vector5 wow bounceInUp img-fluid position-absolute" data-wow-duration="2s" src="assets/images/vector5.png">
+        <div class="container wow bounceInUp" data-wow-duration="2s">
+            <div class="heading-title text-center">
+                <h4 class="text-uppercase">News & Articles</h4>
+                <h2 class="">Stay Update with <br> Traveltrek
+                </h2>
+                <!-- heading title -->
+            </div>
+            <div class="row">
+                <div class="col-lg-4 col-md-4 col-sm-6">
+                    <div class="article-box position-relative">
+                        <figure><img class="img-fluid" src="assets/images/article-img1.jpg" alt="img"></figure>
+                        <div class="bottom-left"><span class="d-block text-white">June 6, 2016 • John Smith</span>
+                            <a href="single-blog.html">
+                                <h6 class="text-white">Change your place and <br> get the fresh air</h6>
+                            </a>
+                            <!-- bottom left -->
+                        </div>
+                        <!-- article box -->
+                    </div>
+                    <!-- col -->
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-6">
+                    <div class="article-box position-relative">
+                        <figure><img class="img-fluid" src="assets/images/article-img2.jpg" alt="img"></figure>
+                        <div class="bottom-left"><span class="d-block text-white">June 6, 2016 • John Smith</span>
+                            <a href="single-blog.html">
+                                <h6 class="text-white">Change your place and <br> get the fresh air</h6>
+                            </a>
+                            <!-- bottom left -->
+                        </div>
+                        <!-- article box -->
+                    </div>
+                    <!-- col -->
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-6 last-con">
+                    <div class="article-box position-relative">
+                        <figure><img class="img-fluid" src="assets/images/article-img3.jpg" alt="img"></figure>
+                        <div class="bottom-left"><span class="d-block text-white">June 6, 2016 • John Smith</span>
+                            <a href="single-blog.html">
+                                <h6 class="text-white">Change your place and <br> get the fresh air</h6>
+                            </a>
+                            <!-- bottom left -->
+                        </div>
+                        <!-- article box -->
+                    </div>
+                    <!-- col -->
+                </div>
+                <!-- row -->
+            </div>
+            <!-- container -->
+        </div>
+        <!-- news and article con -->
+    </section>
     <div id="lucky-footer-container"></div>
 
     <!-- BACK TO TOP BUTTON -->
